--- a/apollo-src/scss/apollo-slider.scss
+++ b/apollo-src/scss/apollo-slider.scss
@@ -41,7 +41,7 @@
     .control{
         margin: -40px 20px;
         position: relative;
-        z-index:999;
+        z-index: 500;
         opacity: 0;
         transition: opacity 1s;
     }
